# cuda-scan-pattern-epita

./: .clang-format  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md
bench/: benchmark_registerer.hh  fixture.hh  main.cc  test.cc  test_helpers.hh  test_helpers.hxx
src/: baseline.cu  cub.cu  opti1.cu  opti2.cu  opti3.cu  opti4.cu  opti4_slow.cu  opti5.cu  opti6.cu  opti7.cu  opti8.cu  opti_reminder.cu  thrust.cu  to_bench.cu  to_bench.cuh
src/cuda_tools/: cuda_error_checking.cuh  host_shared_ptr.cu  host_shared_ptr.cuh  template_generator.hh
